samples/_failures_safe/1761640785_bbc3af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9713c228.c: In function ‘main’:
./samples/SAFE/__tmp_9713c228.c:141:9: error: expected expression at end of input
  141 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_9713c228.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9713c228.c:141:9: error: expected declaration or statement at end of input
